[package]
name = "battle-net-oauth"
version = "0.3.0"
authors = ["Shempignon <nicolas@pointndots.com>"]
edition = "2018"
documentation = "https://docs.rs/battle-net-oauth/"
readme = "README.md"
repository = "https://github.com/shempignon/battle-net-oauth"
keywords = ["api", "oauth", "battlenet", "blizzard"]
license = "MIT"
description = "Rust crate to request a Battle.net OAuth token"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }

[badges]
travis-ci = { repository = "shempignon/battle-net-oauth" }
